--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -1,7 +1,7 @@
 name: DB Restore
 
 on:
-  workflow_dispath:
+  workflow_dispatch:
     inputs:
       source:
         description: use processed (anonymized) or prod data
@@ -27,9 +27,6 @@ on:
         - ttahub-dev-green
         - ttahub-dev-gold
         - ttahub-dev-pink
-    secrets:
-      github-token:
-        required: true
 
 jobs:
   db-restore:
@@ -45,6 +42,6 @@ jobs:
         with:
           cf-version: "8.4.1"
       - name: Cloud Gov Login
-        run: cf login -u ${{ secrets.CG_DEV_USERNAME }} -p ${{ secrets.CG_DEV_PASSWORD }} -o hhs-acf-ohs-tta -a https://api.fr.cloud.gov -s ${{ secrets.CG_DEV_SPACE }} 
+        run: cf login -u "${{ secrets.CG_DEV_USERNAME }} -p ${{ secrets.CG_DEV_PASSWORD }} -o hhs-acf-ohs-tta -a https://api.fr.cloud.gov -s ${{ secrets.CG_DEV_SPACE }} 
       # - name: Run restore script
       #   run: db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}
