--- a/.cfignore
+++ b/.cfignore
@@ -19,3 +19,18 @@ coverage/
 reports/
 test-results/
 test-sftp/
+*.map
+.cache/
+dist/temp/
+build/temp/
+.git/
+.github/
+.vscode/
+.idea/
+*.log
+*.lock
+.env*
+.eslintrc*
+.prettier*
+.husky/
+buildpack_cache/
