[NO-TICKET] Reduce staging package size by expanding .cfignore (#3084)
* Update .cfingnore

* Further trimming:

--- a/.cfignore
+++ b/.cfignore
@@ -14,3 +14,23 @@ tests/
 .tmp/
 *.test.js
 !*.sql
+node_modules/
+coverage/
+reports/
+test-results/
+test-sftp/
+*.map
+.cache/
+dist/temp/
+build/temp/
+.git/
+.github/
+.vscode/
+.idea/
+*.log
+*.lock
+.env*
+.eslintrc*
+.prettier*
+.husky/
+buildpack_cache/
