--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -36,11 +36,12 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
-      - name: Install cf cli
-        uses: cloud-gov/cf-cli-action@v1
+      - name: Login to Cloud Gov
+        # https://github.com/cloud-gov/cg-cli-tools
+        uses: cloud-gov/cg-cli-tools@main
         with:
-          cf-version: "8.4.1"
-      - name: Cloud Gov Login
-        run: cf login -u "${{ secrets.CG_DEV_USERNAME }} -p ${{ secrets.CG_DEV_PASSWORD }} -o hhs-acf-ohs-tta -a https://api.fr.cloud.gov -s ${{ secrets.CG_DEV_SPACE }} 
-      # - name: Run restore script
-      #   run: db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}
+          cf_username: ${{ secrets.CG_DEV_USERNAME }}
+          cf_password: ${{ secrets.CG_DEV_PASSWORD }}
+          cf_space: ${{ secrets.CG_DEV_SPACE }}
+          cf_org: hhs-acf-ohs-tta
+          cf_command: apps
