--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -36,27 +36,34 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
-      - name: CF Login
-        # Reference: https://github.com/cloud-gov/cg-cli-tools
-        uses: cloud-gov/cg-cli-tools@main
+      # - name: CF Login
+      #   # Reference: https://github.com/cloud-gov/cg-cli-tools
+      #   uses: cloud-gov/cg-cli-tools@main
+      #   with:
+      #     cf_username: ${{ secrets.CG_DEV_USERNAME }}
+      #     cf_password: ${{ secrets.CG_DEV_PASSWORD }}
+      #     cf_space: ${{ secrets.CG_DEV_SPACE }}
+      #     cf_org: hhs-acf-ohs-tta
+      #     cf_command: apps
+      - name: Execute DB Restore Task 
+        uses: elliottpope/cloudfoundry-cli-action@v6
         with:
-          cf_username: ${{ secrets.CG_DEV_USERNAME }}
-          cf_password: ${{ secrets.CG_DEV_PASSWORD }}
-          cf_space: ${{ secrets.CG_DEV_SPACE }}
-          cf_org: hhs-acf-ohs-tta
-          cf_command: apps
-      - name: Execute DB Restore Task    
-        run: |
-          set -e
-          TASK_NAME="task-$(date +%s)"
-          COMMAND="cd /home/vcap/app/db-backup/scripts; bash ./db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}"
-          echo "Running $TASK_NAME on environment $TARGET_ENV: $COMMAND"
-          cf run-task ${{ github.event.inputs.target_db }} --name $TASK_NAME --memory 2G --command "$COMMAND" 
-          echo "Waiting for task to complete..."
-          sleep 15
-          ./bin/watch-task.js $TARGET_ENV $TASK_NAME
-          echo "Gathering logs..."
-          sleep 30
-          #cf logs $TARGET_ENV --recent | grep $TASK_NAME
+          CF_API: https://api.my-cloud-foundry.com
+          USERNAME: ${{ secrets.CF_USER }}
+          PASSWORD: ${{ secrets.CF_PASSWORD }}
+          ORG: my-org
+          SPACE: dev
+          COMMAND: | 
+            set -e
+            TASK_NAME="task-$(date +%s)"
+            COMMAND="cd /home/vcap/app/db-backup/scripts; bash ./db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}"
+            echo "Running $TASK_NAME on environment $TARGET_ENV: $COMMAND"
+            cf run-task ${{ github.event.inputs.target_db }} --name $TASK_NAME --memory 2G --command "$COMMAND" 
+            echo "Waiting for task to complete..."
+            sleep 15
+            ./bin/watch-task.js $TARGET_ENV $TASK_NAME
+            echo "Gathering logs..."
+            sleep 30
+            #cf logs $TARGET_ENV --recent | grep $TASK_NAME
 
 
