--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -58,12 +58,14 @@ jobs:
             cf login -a https://api.fr.cloud.gov \
             -u ${{ secrets.CG_DEV_USERNAME }} \
             -p ${{ secrets.CG_DEV_USERNAME }} \
-            -s ${{ secrets.CG_DEV_SPACE }}
-            -o hhs-acf-ohs-tta \
+            -s ${{ secrets.CG_DEV_SPACE }} \
+            -o hhs-acf-ohs-tta
+            
             TASK_NAME="task-$(date +%s)"
+            TARGET_ENV="${{ github.event.inputs.target_db }}"
             COMMAND="cd /home/vcap/app/db-backup/scripts; bash ./db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}"
             echo "Running $TASK_NAME on environment $TARGET_ENV: $COMMAND"
-            cf run-task ${{ github.event.inputs.target_db }} --name $TASK_NAME --m 2G --command "$COMMAND" 
+            cf run-task $TARGET_ENV --name $TASK_NAME --m 2G --command "$COMMAND" 
             echo "Waiting for task to complete..."
             sleep 15
             ./bin/watch-task.js $TARGET_ENV $TASK_NAME
