--- a/.github/workflows/db_restore.yml
+++ b/.github/workflows/db_restore.yml
@@ -62,7 +62,7 @@ jobs:
             -o hhs-acf-ohs-tta
             
             TASK_NAME="task-$(date +%s)"
-            TARGET_ENV="${{ github.event.inputs.target_db }}"
+            TARGET_ENV="tta-smarthub-${{ github.event.inputs.target_db }}"
             COMMAND="cd /home/vcap/app/db-backup/scripts; bash ./db_restore.sh ${{ github.event.inputs.source }} ${{ github.event.inputs.source_date }} ${{ github.event.inputs.target_db }}"
             echo "Running $TASK_NAME on environment $TARGET_ENV: $COMMAND"
             cf run-task $TARGET_ENV --name $TASK_NAME -m 2G --command "$COMMAND" 
