--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -654,12 +654,11 @@ jobs:
 
   clear_cache_job:
     executor: docker-executor
-    parameters:
-      target_env:
-        type: string
     steps:
     - checkout
     - install_cf_tools
+    - cf_login:
+        target_env: tta-smarthub-staging
     - run:
         name: Clear build cache
         command: |
@@ -671,7 +670,7 @@ jobs:
             "tta-smarthub-dev-pink" 
             "tta-smarthub-staging"
           )
-
+          
           for env_name in "${environments[@]}"; do
             echo "Clearing build cache for ${env_name}"
             app_guid=$(cf app --guid ${app_name})
