--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -666,13 +666,21 @@ jobs:
     - run:
         name: Clear build cache
         command: |
-          environments=("tta-smarthub-dev-blue" "tta-smarthub-dev-green" "tta-smarthub-dev-red" "tta-smarthub-dev-gold" "tta-smarthub-dev-pink" "tta-smarthub-staging")
+          environments=(
+            "tta-smarthub-dev-blue" 
+            "tta-smarthub-dev-green" 
+            "tta-smarthub-dev-red" 
+            "tta-smarthub-dev-gold" 
+            "tta-smarthub-dev-pink" 
+            "tta-smarthub-staging"
+          )
           
           for env_name in "${environments[@]}"; do
             echo "Clearing build cache for ${env_name}"
             app_guid=$(cf app --guid ${app_name})
             cf curl -X POST /v3/apps/${app_guid}/actions/clear_buildpack_cache
             echo "Build cache cleared"
+          done
 
 # ----------------- Commands -----------------
 
