--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -678,9 +678,9 @@ jobs:
           )
           
           for env_name in "${environments[@]}"; do
-            echo "Clearing build cache for ${env_name}"
             app_guid=$(cf app --guid ${app_name})
-            cf curl -i -f -X POST /v3/apps/${app_guid}/actions/clear_buildpack_cache
+            echo "Clearing build cache for ${env_name}:${app_guid}"
+            cf curl -f -X POST /v3/apps/${app_guid}/actions/clear_buildpack_cache
             echo "Build cache cleared"
           done
 
