--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -662,7 +662,7 @@ jobs:
     - checkout
     - install_cf_tools
     - cf_login:
-        target_env: staging
+        target_env: ttahub-dev
     - run:
         name: Clear build cache
         command: |
