--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ version: 2.1
 executors:
   docker-executor:
     docker:
-    - image: cimg/node:20.19.3-browsers
+    - image: cimg/node:-browsers
   docker-postgres-executor:
     docker:
-    - image: cimg/node:20.19.3-browsers
+    - image: cimg/node:22.20.0-browsers
       environment:
         DATABASE_URL: postgresql://postgres@localhost/ttasmarthub
         REDIS_HOST: localhost
