update js-yaml and newreliuc

--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "body-parser": "^1.20.3",
     "follow-redirects": "^1.15.6",
     "json-pointer": "0.6.2",
+    "js-yaml": "^4.1.1",
     "marked": "^4.0.10",
     "minimist": "^1.2.7",
     "moment": "^2.29.2",
@@ -383,7 +384,7 @@
     "moment-timezone": "^0.5.45",
     "multiparty": "^4.2.2",
     "mz": "^2.7.0",
-    "newrelic": "^12.16.1",
+    "newrelic": "^13.6.4",
     "nodemailer": "^7.0.7",
     "openid-client": "^6.6.4",
     "opentelemetry": "^0.1.0",
