--- a/package.json
+++ b/package.json
@@ -152,7 +152,8 @@
     "tar-fs": "^2.1.3",
     "jest": "29.7.0",
     "babel-jest": "29.7.0",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "glob": "^11.1.0"
   },
   "eslintConfig": {
     "extends": [
