Update preview target

--- a/deployment_config/dev_vars.yml
+++ b/deployment_config/dev_vars.yml
@@ -53,6 +53,6 @@ SMARTSHEET_ACCESS_TOKEN: "${SMARTSHEET_ACCESS_TOKEN}"
 REACT_APP_GTM_ENABLED: "${DEV_GTM_ENABLED}"
 REACT_APP_GTM_ID: "${GLOBAL_GTM_ID}"
 REACT_APP_GTM_AUTH: "${DEV_GTM_AUTH}"
-REACT_APP_GTM_PREVIEW: "${PROD_GTM_PREVIEW}"
+REACT_APP_GTM_PREVIEW: "${DEV_GTM_PREVIEW}"
 REACT_APP_WEBSOCKET_URL: ws://tta-smarthub-${full_env}.app.cloud.gov
 REACT_APP_INCLUDE_ACCESSIBILITY_CSS: "false"
