--- a/package.json
+++ b/package.json
@@ -347,7 +347,7 @@
     "axios": "^1.12.0",
     "bull": "^4.2.0",
     "chardet": "^2.0.0",
-    "cheerio": "^1.0.0-rc.10",
+    "cheerio": "^1.1.2",
     "client-oauth2": "^4.3.3",
     "cls-hooked": "^4.2.2",
     "connect-redis": "6",
