--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,10 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "../build/server",
+    "skipLibCheck": true, 
+    "incremental": true,
+    "resolveJsonModule": true, 
+    "noErrorTruncation": true,
     "esModuleInterop": true,
     "declaration": false,
     "allowJs": true,
