--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -413,7 +413,7 @@ jobs:
         command: |
           if [ -n "${CIRCLE_PULL_REQUEST}" ]; then
             chmod +x ./tools/check-coverage.js
-            node -r esm ./tools/check-coverage.js \
+            node ./tools/check-coverage.js \
               --coverage-file=../frontend/coverage/coverage-final.json \
               --artifact-dir=../frontend/coverage-artifacts \
               --directory-filter=frontend/ \
