--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Office of Head Start Training & Technical Assistance Data Platform\r =============================================",
   "main": "index.js",
   "engines": {
-    "node": "20.19.3"
+    "node": "22.20.0"
   },
   "scripts": {
     "build": "tsc -p src",
@@ -108,7 +108,7 @@
     "updateCompletedEventReportPilots:local": "./node_modules/.bin/babel-node ./src/tools/updateCompletedEventReportPilotsCLI.js",
     "publish:common": "yarn --cwd ./packages/common publish",
     "merge-coverage": "node ./src/tools/merge-coverage.js",
-    "check-coverage": "node -r esm ./src/tools/check-coverage.js --fail-on-uncovered=true",
+    "check-coverage": "node ./src/tools/check-coverage.js --fail-on-uncovered=true",
     "createMonitoringGoalsCLI": "node ./build/server/src/tools/createMonitoringGoalsCLI.js",
     "createMonitoringGoalsCLI:local": "tsx ./src/tools/createMonitoringGoalsCLI.js"
   },
@@ -347,7 +347,7 @@
     "axios": "^1.12.0",
     "bull": "^4.2.0",
     "chardet": "^2.0.0",
-    "cheerio": "^1.0.0-rc.10",
+    "cheerio": "^1.1.2",
     "client-oauth2": "^4.3.3",
     "cls-hooked": "^4.2.2",
     "connect-redis": "6",
