--- a/package.json
+++ b/package.json
@@ -331,6 +331,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/lib-storage": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@axe-core/cli": "^4.11.0",
     "@axe-core/playwright": "^4.11.0",
     "@babel/runtime": "^7.26.10",
