--- a/package.json
+++ b/package.json
@@ -329,6 +329,9 @@
     "umzug": "^3.2.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/lib-storage": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@axe-core/cli": "^4.11.0",
     "@axe-core/playwright": "^4.11.0",
     "@babel/runtime": "^7.26.10",
@@ -342,7 +345,7 @@
     "@types/ioredis-mock": "^8.2.6",
     "adm-zip": "^0.5.1",
     "ajv": "^8.17.1",
-    "aws-sdk": "^2.826.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "aws4": "^1.11.0",
     "axios": "^1.12.0",
     "bull": "^4.2.0",
@@ -361,8 +364,8 @@
     "dompurify": "^3.2.4",
     "dot-wild": "^3.0.1",
     "dotenv": "^16.4.1",
-    "email-templates": "^8.0.4",
-    "express": "^4.20.0",
+    "email-templates": "^12.0.3",
+    "express": "^4.22.0",
     "express-http-context": "^1.2.4",
     "express-session": "^1.18.2",
     "express-unless": "^1.0.0",
