--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "../build/server",
-    "skipLibCheck": true, 
     "incremental": true,
     "resolveJsonModule": true, 
     "noErrorTruncation": true,
@@ -12,7 +11,7 @@
     "declaration": false,
     "allowJs": true,
     "removeComments": true,
-    "types": ["jest"]
+    "skipLibCheck": true
   },
   "include": [
     "./**/*.js",
