--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "import:system": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub tsx src/tools/importSystemCLI.ts",
     "reconcile:legacy": "node ./build/server/src/tools/reconcileLegacyReports.js",
     "reconcile:legacy:local": "./node_modules/.bin/babel-node ./src/tools/reconcileLegacyReports.js",
-    "processData:local": "tsx ./build/server/src/tools/processDataCLI.js",
+    "processData:local": "yarn build && node ./build/server/src/tools/processDataCLI.js",
     "ldm:ci": "cross-env POSTGRES_USERNAME=postgres POSTGRES_DB=ttasmarthub tsx ./src/tools/logicalDataModelCLI.ts",
     "ldm": "tsx ./src/tools/logicalDataModelCLI.ts",
     "changeReportStatus": "node ./build/server/src/tools/changeReportStatusCLI.js",
