add env var loading for goal creation switch

--- a/.env.example
+++ b/.env.example
@@ -100,6 +100,9 @@ ITAMS_MD_PORT=22
 ITAMS_MD_USERNAME=tta_ro
 ITAMS_MD_PASSWORD=password
 
+# Enable Monitoring Goal creation
+ENABLE_MONITORING_GOAL_CREATION=true
+
 # Smartsheet integration
 SMARTSHEET_ACCESS_TOKEN=secrettoken
 SMARTSHEET_ENDPOINT=https://api.smartsheetgov.com/2.0/
