--- a/manifest.yml
+++ b/manifest.yml
@@ -15,6 +15,7 @@ applications:
       BUILD_NUMBER: ((BUILD_NUMBER))
       BUILD_TIMESTAMP: ((BUILD_TIMESTAMP))
       CLAMAV_ENDPOINT: ((CLAMAV_ENDPOINT))
+      ENABLE_MONITORING_GOAL_CREATION: ((ENABLE_MONITORING_GOAL_CREATION))
       FORCE_CRON: ((FORCE_CRON))
       FROM_EMAIL_ADDRESS: ((FROM_EMAIL_ADDRESS))
       HSES_DATA_FILE_URL: ((HSES_DATA_FILE_URL))
